:bug: Fix background color for border design TagInputs in dark mode

--- a/src/scss/_objects/_components/tag-input.scss
+++ b/src/scss/_objects/_components/tag-input.scss
@@ -9,7 +9,7 @@ $tag-height: 24px;
 
   &#{&}--border-design {
     border: 1px solid rgba(160,160,160,0.3);
-    background-color: var(--chayns-color--000);
+    @include chayns-color(background-color, $input-border-design-background-color-name);
     padding: 8px 10px;
     display: flex;
     align-items: center;
